<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.big0soft.nearexpireadmin.ui.viewmodel.LocationDetailsViewModel" />

        <import type="com.big0soft.nearexpireadmin.domain.enums.Status" />

        <import type="android.view.View" />

        <import type="com.big0soft.nearexpireadmin.data.validation.ValidateResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentLocationDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/fragmentLocationTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".2">



                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_input_frome"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentLocationCountryInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:_resError="@{viewModel.countryNameValidationResultLiveData.message}"
                    android:hint="@string/country"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentLocationTitleLayout"
                    app:startIconDrawable="@drawable/globe">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentLocationCountryEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{(edit)->viewModel.setCountryNameValidationResultLiveData(ValidateResult.progressResult)}"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentLocationCityInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/city"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:_resError="@{viewModel.cityNameValidationResultLiveData.message}"

                    app:layout_constraintTop_toBottomOf="@id/fragmentLocationCountryInputLayout"
                    app:startIconDrawable="@drawable/layout_11">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentLocationCityEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{(edit)->viewModel.setCityNameValidationResultLiveData(ValidateResult.progressResult)}"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentLocationStreetInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/street"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:_resError="@{viewModel.streetNameValidationResultLiveData.message}"

                    app:layout_constraintTop_toBottomOf="@id/fragmentLocationCityInputLayout"
                    app:startIconDrawable="@drawable/road">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentLocationStreetEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{(edit)->viewModel.setStreetNameValidationResultLiveData(ValidateResult.progressResult)}"


                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentLocationDetailsSubmitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/submit"
                    app:cornerRadius="@dimen/_4sdp"
                    app:icon="@drawable/send"
                    app:iconGravity="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentLocationStreetInputLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>