...
        <import type="android.view.View" />

        <import type="com.big0soft.nearexpireadmin.data.validation.ValidateResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentStoreSetup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentStoreSetupUplaodBackgroundBtn"
                    app:riv_corner_radius="@dimen/_6sdp"
                    tools:src="@drawable/image_2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentSetupNextBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/next"
                    app:cornerRadius="@dimen/_4sdp"
                    app:layout_constraintStart_toStartOf="parent"
...
