...
        android:id="@+id/fragmentStoreSetup2"
        android:name="com.big0soft.nearexpireadmin.ui.fragment.StoreSetupFragment"
        android:label="@string/store_setup"

        >
        <action
            android:id="@+id/action_storeSetupFragment_to_locationDetailsFragment"
            app:destination="@id/fragmentLocationDetails2"
            app:exitAnim="@android:anim/slide_in_left"
            app:enterAnim="@android:anim/slide_out_right"
            />
    </fragment>
    <fragment
...
