...
    <string name="sub_category">Subcategory:</string>
    <string name="category">Category</string>
    <string name="delivery_availability">Delivery Availability</string>
    <string name="edit_product_details">Edit Product Details</string>

    <string name="invalid_provider">Your Email or Phone Are Invalid </string>
    <string name="empty_filed">Require Field</string>
    <string name="no_user_found">User not found</string>
    <string name="login_successful">Login Successful</string>
    <string name="register_fragment_label">Register</string>
    <string name="loginfragment">Login</string>
    <string name="image_required">Pleas Upload Image Logo !</string>
    <string name="image_background_required">Please Upload Image for Background !</string>
...
